# api2db

./: Cargo.toml  README.md  temp_resp_data.json
.aws/: credentials
src/: main.rs
ui/: appwindow.slint
