[package]
name = "api2db"
version = "0.1.0"
authors = ["davgre1 <davidfelygreene@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
exitfailure = "0.5.1"

[build-dependencies]
slint-build = "1.4"
