[package]
name = "api2db"
version = "0.1.0"
authors = ["davgre1 <davidfelygreene@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.24.2", features = ["full"] }
hyper = "0.11"
tokio-core = "0.1"
minreq = "2.11.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rusoto_dynamodb = "0.47.0"
aws-config = { version = "1.1.10", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.21.0"

[build-dependencies]
slint-build = "1.4"
